--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 						</div> 
 						<div class="column">
 							<p class="my-auto mx-1">
-								<a class="btn btn-large btn-light" href="https://github.com/ankanbhunia/PDIM" role="button" target="_blank">
+								<a class="btn btn-large btn-light" href="https://github.com/ankanbhunia/PIDM" role="button" target="_blank">
 									
 									<span>Code</span>
 								</a>
